[gd_scene load_steps=4 format=3 uid="uid://b2lesre7doh7r"]

[ext_resource type="Script" uid="uid://bd02mwinpc5cj" path="res://Scripts/equipment_slot.gd" id="1_qq6so"]
[ext_resource type="Texture2D" uid="uid://bgkv2ibpodqlb" path="res://Assets/UI/grey_panel.png" id="2_t6p07"]
[ext_resource type="Texture2D" uid="uid://b3551dd4wlv6w" path="res://Assets/UI/hat-inventory-bg.png" id="3_t6p07"]

[node name="EquipmentSlot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 75.0
offset_bottom = 75.0
script = ExtResource("1_qq6so")

[node name="SlotBackground" type="NinePatchRect" parent="."]
self_modulate = Color(0.290196, 0.537255, 0.560784, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_t6p07")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="SlotBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="SlotBackground/MarginContainer"]
layout_mode = 2

[node name="PlaceholderSprite" type="TextureRect" parent="SlotBackground/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_t6p07")

[node name="Tooltip" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SlotBackground" type="NinePatchRect" parent="Tooltip"]
self_modulate = Color(0.290196, 0.537255, 0.560784, 1)
layout_mode = 0
offset_left = 72.0
offset_top = -33.0
offset_right = 299.0
texture = ExtResource("2_t6p07")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="Tooltip/SlotBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="Tooltip/SlotBackground/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 8
text = "ProximityBanana's Fedora"
